# foundation-react

./: .eslintignore  .eslintrc.cjs  .gitignore  .mcp.json  .npmignore  .prettierignore  .prettierrc  CHANGELOG.md  CLAUDE.md  README.md  components.json  eslint.config.mjs  index.html  jest.config.cjs  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.build.json  tsconfig.json  vite.config.mts
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
.storybook/: main.ts  preview.tsx
.storybook/dataset/: README.md  orders.csv  orders.parquet  products.csv  products.parquet  users.csv  users.parquet
examples/shadowcljs-app/: .gitignore  package-lock.json  package.json  shadow-cljs.edn  style.css
examples/standalone/: components.json  index.html  main.jsx  package-lock.json  package.json  pnpm-lock.yaml  styles.css  vite-env.d.ts  vite.config.js  vite.config.ts  wrapper.tsx
examples/vite-app/: README.md  index.html  package.json  pnpm-lock.yaml
ext/: Dockerfile  pyproject.toml  samconfig.toml  server.py  template.yaml
scripts/: build-scoped-css.js
specs/001-foundation-cockpit/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-sql-cockpit/: data-model.md  plan.md  quickstart.md  research.md  spec.md  (+1 more)
sql/: sql-cockpit.stories.tsx
src/: index.ts  vite-env.d.ts
stories/: composer.stories.tsx
types/: env.d.ts  vite-env.d.ts
(+119 files in other folders)
