[project]
name = "foundation-react"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ag-ui-protocol>=0.1.9",
    "agno",
    "fastapi>=0.121.0",
    "fastmcp>=2.13.0.2",
    "mangum>=0.19.0",
    "openai>=2.7.1",
]

[tool.uv.sources]
agno = { git = "https://github.com/Blockether/agno.git", subdirectory = "libs/agno" }
